overlap issue

--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -364,7 +364,7 @@ body.dark #footer a:hover{
   width: 60rem;
   height: 3rem;
   margin-left: 0.5rem;
-  margin-top: 60px; 
+  margin-top: 100px; 
   box-sizing: border-box;
   border-bottom: 1px solid #2c2e3e;
   display: flex;
